--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/tasks/main.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/tasks/main.yml
@@ -14,6 +14,15 @@
   run_once: true
   register: avd_requirements
 
+# For backward compatibiity reasons we need to handle the case where the role
+# is imported in a playbook with a tag which would have run all the tasks.
+- name: Handle role being imported with a tag
+  tags: [never]
+  ansible.builtin.set_fact:
+    run_all_tasks: true
+  run_once: true
+
+
 - name: Generate eos intended configuration and device documentation
   tags: [always]
   arista.avd.eos_cli_config_gen:
@@ -23,8 +32,15 @@
     read_structured_config_from_file: "{{ structured_config is not arista.avd.defined }}"
     conversion_mode: "{{ avd_data_conversion_mode }}"
     validation_mode: "{{ avd_data_validation_mode }}"
-    generate_device_config: "{{ ansible_run_tags is arista.avd.contains(['all', 'build', 'provision']) and ansible_skip_tags is not arista.avd.contains(['build', 'provision']) }}"
-    generate_device_doc: "{{ generate_device_documentation | arista.avd.default(true) and ansible_run_tags is arista.avd.contains(['all', 'build', 'provision', 'documentation']) and ansible_skip_tags is not arista.avd.contains(['build', 'provision', 'documentation']) }}"
+    # The logic to be on par with previous tags behavior is as follow:
+    # either all tasks should be run OR the config should explicitly be generated because of a tag in [all, build, provision]
+    # AND the config generation should NOT be explicitely be skipped (Ansible precedence)
+    generate_device_config: "{{ ((run_all_tasks | default(false)) or ansible_run_tags  is arista.avd.contains(['all', 'build', 'provision'])) and ansible_skip_tags is not arista.avd.contains(['build', 'provision']) }}"
+    # The logic to be on par with previous tags behavior is as follow:
+    # either all tasks should be run OR the config should explicitly be generated because of a tag in [all, build, provision, documentation]
+    # AND the config generation should NOT be explicitely be skipped (Ansible precedence)
+    # AND generate_device_documentation must NOT be false
+    generate_device_doc: "{{ generate_device_documentation | arista.avd.default(true) and ((run_all_tasks | default(false)) or ansible_run_tags is arista.avd.contains(['all', 'build', 'provision', 'documentation'])) and ansible_skip_tags is not arista.avd.contains(['build', 'provision', 'documentation']) }}"
     device_doc_toc: true
     cprofile_file: "{{ eos_cli_config_gen_cprofile_file | default(omit) }}"
   delegate_to: localhost
