--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
@@ -194,6 +194,7 @@ all:
               hosts:
                 CUSTOM-PYTHON_MODULES-L3LEAF1A:
                 CUSTOM-PYTHON_MODULES-L3LEAF1B:
+                CUSTOM-PYTHON_MODULES-L3LEAF2:
         AUTO_BGP_ASN:
           hosts:
             AUTO_BGP_ASN_LEAF1A:
