--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CUSTOM_PYTHON_MODULES_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CUSTOM_PYTHON_MODULES_TESTS.yml
@@ -34,3 +34,6 @@ ip_offset_10: 10
 ip_offset_20: 20
 
 description_prefix: "TEST_CUSTOM_PREFIX"
+
+custom_ip_pools_for_vrfs:
+  TEST_VRF: 172.16.0.0/24
