Feat(cv_deploy): Add application data to CV Pathfinder metadata (#4247)

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-pathfinder1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-pathfinder1.yml
@@ -431,6 +431,8 @@ application_traffic_recognition:
     applications:
     - name: CUSTOM-APPLICATION-1
     - name: skype
+    application_transports:
+    - rtp
   - name: VOICE
     applications:
     - name: CUSTOM-VOICE-APPLICATION
@@ -507,39 +509,35 @@ vxlan_interface:
         vni: 66
       - name: ATTRACTED-VRF-FROM-UPLINK
         vni: 166
-flow_tracking:
-  hardware:
-    trackers:
-    - name: FLOW-TRACKER
-      record_export:
-        on_inactive_timeout: 70000
-        on_interval: 300000
-      exporters:
-      - name: CV-TELEMETRY
-        collector:
-          host: 127.0.0.1
-        local_interface: Loopback0
-        template_interval: 3600000
-    shutdown: false
 metadata:
-  cv_tags:
-    device_tags:
-    - name: Role
-      value: pathfinder
-    - name: Region
-      value: AVD_Land_West
-    - name: PathfinderSet
-      value: PATHFINDERS
-    interface_tags:
-    - interface: Ethernet1
-      tags:
-      - name: Type
-        value: wan
-      - name: Carrier
-        value: Orange
-      - name: Circuit
-        value: '888'
   cv_pathfinder:
+    applications:
+      profiles:
+      - name: VIDEO
+        builtin_applications:
+        - name: skype
+        user_defined_applications:
+        - name: CUSTOM-APPLICATION-1
+        categories:
+        - category: VIDEO1
+        transport_protocols:
+        - rtp
+      - name: VOICE
+        builtin_applications:
+        - name: CUSTOM-VOICE-APPLICATION
+      - name: MPLS-ONLY
+      - name: APP-PROFILE-CONTROL-PLANE
+        user_defined_applications:
+        - name: APP-CONTROL-PLANE
+      categories:
+        builtin_applications:
+        - name: microsoft-teams
+          category: VIDEO1
+        user_defined_applications:
+        - name: CUSTOM-APPLICATION-2
+          category: VIDEO1
+        - name: CUSTOM-DSCP-APPLICATION
+          category: VIDEO1
     role: pathfinder
     ssl_profile: profileB
     vtep_ip: 192.168.144.2
@@ -623,6 +621,8 @@ metadata:
           preference: alternate
         - name: LAN_HA
           preference: preferred
+        application_profiles:
+        - APP-PROFILE-CONTROL-PLANE
       - id: 3
         name: DEFAULT-AVT-POLICY-VIDEO
         pathgroups:
@@ -634,6 +634,8 @@ metadata:
           preference: preferred
         - name: LAN_HA
           preference: preferred
+        application_profiles:
+        - VIDEO
       - id: 1
         name: DEFAULT-AVT-POLICY-DEFAULT
         pathgroups:
@@ -660,6 +662,8 @@ metadata:
           preference: alternate
         - name: LAN_HA
           preference: preferred
+        application_profiles:
+        - VOICE
       - constraints:
           lossrate: 42.0
         id: 4
@@ -673,6 +677,8 @@ metadata:
           preference: alternate
         - name: LAN_HA
           preference: preferred
+        application_profiles:
+        - VIDEO
       - id: 5
         name: PROD-AVT-POLICY-MPLS-ONLY
         pathgroups:
@@ -680,6 +686,8 @@ metadata:
           preference: preferred
         - name: LAN_HA
           preference: preferred
+        application_profiles:
+        - MPLS-ONLY
       - id: 1
         name: PROD-AVT-POLICY-DEFAULT
         pathgroups:
@@ -703,6 +711,8 @@ metadata:
           preference: preferred
         - name: LAN_HA
           preference: preferred
+        application_profiles:
+        - VIDEO
       - id: 1
         name: DEFAULT-AVT-POLICY-DEFAULT
         pathgroups:
@@ -726,6 +736,8 @@ metadata:
           preference: alternate
         - name: LAN_HA
           preference: preferred
+        application_profiles:
+        - VOICE
       - id: 1
         name: TRANSIT-AVT-POLICY-DEFAULT
         pathgroups:
@@ -753,3 +765,34 @@ metadata:
           preference: alternate
         - name: LAN_HA
           preference: preferred
+  cv_tags:
+    device_tags:
+    - name: Role
+      value: pathfinder
+    - name: Region
+      value: AVD_Land_West
+    - name: PathfinderSet
+      value: PATHFINDERS
+    interface_tags:
+    - interface: Ethernet1
+      tags:
+      - name: Type
+        value: wan
+      - name: Carrier
+        value: Orange
+      - name: Circuit
+        value: '888'
+flow_tracking:
+  hardware:
+    trackers:
+    - name: FLOW-TRACKER
+      record_export:
+        on_inactive_timeout: 70000
+        on_interval: 300000
+      exporters:
+      - name: CV-TELEMETRY
+        collector:
+          host: 127.0.0.1
+        local_interface: Loopback0
+        template_interval: 3600000
+    shutdown: false
