--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/intended/configs/host1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/intended/configs/host1.cfg
@@ -189,49 +189,33 @@ interface Port-Channel100
    logging event link-status
    no switchport
 !
-interface Ethernet3
-   description P2P_LINK_TO_DC1-SPINE2_Ethernet2
-   mtu 1500
-   no switchport
-   ipv6 enable
-   ipv6 address 2002:ABDC::1/64
-   ipv6 nd prefix 2345:ABCD:3FE0::1/96 infinite 50 no-autoconfig
-   ipv6 nd prefix 2345:ABCD:3FE0::2/96 50 infinite
-   ipv6 nd prefix 2345:ABCD:3FE0::3/96 100000 no-autoconfig
-!
-interface Ethernet5
-   description Molecule Routing
-   no shutdown
-   mtu 9100
-   no switchport
-   ip ospf cost 99
-   ip ospf network point-to-point
-   ip ospf authentication message-digest
-   ip ospf authentication-key 7 asfddja23452
-   ip ospf area 100
-   ip ospf message-digest-key 1 sha512 7 asfddja23452
-!
-interface Ethernet26
-   no switchport
-!
-interface Ethernet26.1
-   description TENANT_A pseudowire 1 interface
-   encapsulation vlan
-      client unmatched
-!
-interface Ethernet31
-   description DOT1X Testing - force-unauthorized - no phone
+interface Ethernet1
+   switchport access vlan 100
+   switchport mode access
    switchport
-   dot1x port-control force-unauthorized
 !
-interface Ethernet47
-   description IP Helper
-   no switchport
-   ip address 172.31.255.1/31
-   ip helper-address 10.10.64.151
-   ip helper-address 10.10.96.101 source-interface Loopback0
-   ip helper-address 10.10.96.150 vrf MGMT source-interface Loopback0
-   ip helper-address 10.10.96.151 vrf MGMT
+interface Ethernet2
+   switchport trunk native vlan 10
+   switchport trunk allowed vlan 110
+   switchport mode trunk
+   switchport trunk group group1
+   switchport trunk group group2
+   switchport
+!
+interface Ethernet3
+   switchport trunk native vlan tag
+   switchport phone vlan 20
+   switchport phone trunk tagged
+   switchport mode trunk phone
+   switchport
+!
+interface Ethernet4
+   switchport vlan translation in 23 50
+   switchport vlan translation out 25 49
+   switchport vlan translation 34 60
+   switchport
+   switchport trunk private-vlan secondary
+   switchport pvlan mapping 2,3,4
 !
 interface Loopback0
    description EVPN_Overlay_Peering
