--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/inventory/host_vars/host1/router-bgp.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/inventory/host_vars/host1/router-bgp.yml
@@ -10,9 +10,6 @@ router_bgp:
       type: evpn
       remote_as: "65001"
       update_source: Loopback0
-      # Testing peer_filter & bgp_listen_range_prefix which were deprecated in 4.0.0. To be removed in 5.0.0
-      peer_filter: myfilter
-      bgp_listen_range_prefix: 10.10.10.0/24
   # Testing neighbors as dict of dict
   # Dict type is deprecated in 4.0.0. To be removed in 5.0.0
   neighbors:
@@ -38,9 +35,6 @@ router_bgp:
     peer_groups:
       EVPN-OVERLAY-PEERS:
         activate: true
-        next_hop:
-          # Testing address_family_ipv6_originate which is deprecated in 4.0.0. To be removed in 5.0.0
-          address_family_ipv6_originate: true
     # Testing networks as dict of dict
     # Dict type is deprecated in 4.0.0. To be removed in 5.0.0
     networks:
@@ -142,24 +136,6 @@ router_bgp:
       neighbors:
         10.255.251.1:
           peer_group: EVPN-OVERLAY-PEERS
-          # prefix_list_in is deprecated in 4.5.0. To be removed in 5.0.0
-          prefix_list_in: PL-TEST-IN
-          # prefix_list_out is deprecated in 4.5.0. To be removed in 5.0.0
-          prefix_list_out: PL-TEST-OUT
-        10.2.3.4:
-          # prefix_list_in is deprecated in 4.5.0. To be removed in 5.0.0
-          # Testing overlap with address family (should be ignored)
-          prefix_list_in: PL-TEST-IN
-          # prefix_list_out is deprecated in 4.5.0. To be removed in 5.0.0
-          # Testing overlap with address family (should be ignored)
-          prefix_list_out: PL-TEST-OUT
-        10.2.3.5:
-          # prefix_list_in is deprecated in 4.5.0. To be removed in 5.0.0
-          # Testing existing in AF but not overlapping (should get configured)
-          prefix_list_in: PL-TEST-IN
-          # prefix_list_out is deprecated in 4.5.0. To be removed in 5.0.0
-          # Testing existing in AF but not overlapping (should get configured)
-          prefix_list_out: PL-TEST-OUT
       # Part of test of overlaps from VRF neighbors. To be removed in 5.0.0
       address_family_ipv4:
         neighbors:
@@ -189,11 +165,7 @@ router_bgp:
         Ethernet27:
           peer_group: MLAG-IPv4-UNDERLAY-PEER
           remote_as: "1"
-      # Testing address_families as dict of dict
-      # Dict type is deprecated in 4.0.0. To be removed in 5.0.0
-      # address_families itself is deprecated in 4.0.0. To be removed in 5.0.0.
-      address_families:
-        ipv4:
+      address_family_ipv4:
           # Testing neighbors as dict of dict
           # Dict type is deprecated in 4.0.0. To be removed in 5.0.0
           neighbors:
@@ -209,11 +181,6 @@ router_bgp:
             10.0.0.0/8:
             100.64.0.0/10:
               route_map: RM-10.2.3.4
-          # Testing peer_groups as dict of dict
-          # Dict type is deprecated in 4.0.0. To be removed in 5.0.0
-          peer_groups:
-            TEST_PEER_GRP:
-              activate: true
   # Testing redistribute_routes as dict of dict
   # Dict type is deprecated in 4.0.0. To be removed in 5.0.0
   redistribute_routes:
