Fix(eos_designs): Do not render vrf default under router ospf

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/mgmt_interface_host.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/mgmt_interface_host.cfg
@@ -133,6 +133,9 @@ vlan 451
 vlan 452
    name Tenant_D_v6_WAN_Zone_3
 !
+vlan 1234
+   name VRF_DEFAULT_SVI_WITH_OSPF
+!
 vrf instance MGMT
 !
 interface MY_INTERFACE_HOST
