--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/evpn_services_l2_only_false.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/evpn_services_l2_only_false.yml
@@ -186,6 +186,19 @@ router_bgp:
         - '41:41'
     redistribute_routes:
     - source_protocol: connected
+  - name: default
+    rd: 192.168.255.109:123
+    route_targets:
+      import:
+      - address_family: evpn
+        route_targets:
+        - 123:123
+      export:
+      - address_family: evpn
+        route_targets:
+        - 123:123
+    redistribute_routes:
+    - source_protocol: ospf
   - name: Tenant_D_OP_Zone
     router_id: 192.168.255.109
     rd: 192.168.255.109:40
@@ -317,6 +330,14 @@ router_bgp:
     redistribute_routes:
     - learned
     vlan: 450-452
+  - name: default
+    rd: 192.168.255.109:123
+    route_targets:
+      both:
+      - 123:123
+    redistribute_routes:
+    - learned
+    vlan: '1234'
   - name: Tenant_D_OP_Zone
     rd: 192.168.255.109:40
     route_targets:
@@ -555,6 +576,9 @@ vlans:
   tenant: Tenant_D
 - id: 452
   name: Tenant_D_v6_WAN_Zone_3
+  tenant: Tenant_D
+- id: 1234
+  name: VRF_DEFAULT_SVI_WITH_OSPF
   tenant: Tenant_D
 - id: 410
   name: Tenant_D_v6_OP_Zone_1
@@ -807,6 +831,12 @@ vlan_interfaces:
   ipv6_address_virtuals:
   - 2001:db8:412::1/64
   vrf: '12345678'
+- name: Vlan1234
+  tenant: Tenant_D
+  description: VRF_DEFAULT_SVI_WITH_OSPF
+  shutdown: true
+  ospf_area: 0.0.0.0
+  ospf_network_point_to_point: false
 - name: Vlan410
   tenant: Tenant_D
   tags:
@@ -863,6 +893,15 @@ vlan_interfaces:
   - ip_helper: 1.1.1.2
     source_interface: lo102
     vrf: TEST
+router_ospf:
+  process_ids:
+  - id: 123
+    passive_interface_default: true
+    router_id: 192.168.255.109
+    no_passive_interfaces:
+    - Vlan1234
+    redistribute:
+      bgp: {}
 vxlan_interface:
   Vxlan1:
     description: evpn_services_l2_only_false_VTEP
@@ -926,6 +965,8 @@ vxlan_interface:
         vni: 40451
       - id: 452
         vni: 40452
+      - id: 1234
+        vni: 41234
       - id: 410
         vni: 40410
       - id: 411
@@ -955,6 +996,8 @@ vxlan_interface:
         vni: 31
       - name: '12345678'
         vni: 41
+      - name: default
+        vni: 123
       - name: Tenant_D_OP_Zone
         vni: 40
 virtual_source_nat_vrfs:
