--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/mgmt_interface_default.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/mgmt_interface_default.yml
@@ -157,6 +157,9 @@ vlans:
 - id: 452
   name: Tenant_D_v6_WAN_Zone_3
   tenant: Tenant_D
+- id: 1234
+  name: VRF_DEFAULT_SVI_WITH_OSPF
+  tenant: Tenant_D
 - id: 410
   name: Tenant_D_v6_OP_Zone_1
   tenant: Tenant_D
